# fast_zero

./: .gitignore  database.db  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  models.py  security.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/versions/: 089e84a7b862_updated_on_users.py  09546137350f_create_todos_table.py  0feb30fde4c6_create_users_table.py  33b25656e0cb_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
